--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".SelectOrAddPetActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             />
-        <activity android:name=".SingUpActivity"
+        <activity android:name=".SignInActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             />
