--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.mypetslife"
+        applicationId "com.argdev.mypetslife"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
