--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mypetslife">
+    package="com.argdev.mypetslife">
 
     <application
         android:allowBackup="true"
@@ -9,15 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyPetsLife">
-        <activity android:name=".SelectOrAddPetActivity"
+        <activity android:name="com.argdev.mypetslife.SelectOrAddPetActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             />
-        <activity android:name=".SignInActivity"
+        <activity android:name="com.argdev.mypetslife.SignInActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             />
         <activity
-            android:name=".LoginActivity"
+            android:name="com.argdev.mypetslife.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             android:screenOrientation="portrait"
             >  <!--no se puede poner en horizontal-->
