--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyPetsLife">
-        <activity android:name="com.argdev.mypetslife.Activities.SelectOrAddPetActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            />
-        <activity android:name="com.argdev.mypetslife.Activities.SignUpActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            />
+        <activity android:name=".Activities.CreatePetActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+            ></activity>
         <activity
-            android:name="com.argdev.mypetslife.Activities.LoginActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:name=".Activities.SelectOrAddPetActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".Activities.SignUpActivity"
             android:screenOrientation="portrait"
-            >  <!--no se puede poner en horizontal-->
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity
+            android:name=".Activities.LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar"> <!-- no se puede poner en horizontal -->
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
