--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyPetsLife">
+        <activity android:name=".Activities.AddPetPhotoActivity"></activity>
         <activity
             android:name=".Activities.SelectWeightActivity"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
