--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,11 @@ apply plugin: 'com.google.gms.google-services'
 
 dependencies {
 
-    implementation platform('com.google.firebase:firebase-bom:26.4.0')
+    implementation platform('com.google.firebase:firebase-bom:26.5.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-storage'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -47,6 +48,8 @@ dependencies {
 
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+
+    implementation 'com.github.yalantis:ucrop:2.2.6-native'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
