--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyPetsLife">
-        <activity android:name=".Activities.AddPetPhotoActivity"></activity>
+        <activity android:name=".Activities.PetInfoActivity"
+            android:theme="@style/Theme.Fab_Bottom_app_bar_Light"/>
+        <activity android:name=".Activities.AddPetPhotoActivity" />
         <activity
             android:name=".Activities.SelectWeightActivity"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar" />
@@ -40,11 +42,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
